optimize mobile experience

--- a/full-site-underdev/travel.html
+++ b/full-site-underdev/travel.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,8 +82,8 @@
 
 	<div class="car float">
 		<h4>Cars</h4>
-		<div class=" text col-lg-10">
-		<h5 class="col-lg-8">If your school isn’t along a bus route, you can still be reimbursed for travel. Gas will be reimbursed for any car that has 3 or more hackers in it (these girls do need to register, check in, and participate in the demo fair, to ensure that they are actually attending Pearl Hacks). Please see the chart to check how much of your gas we will cover. Please fill out the gas form if you need to apply for reimbursement. We have limited funds, which will be given on a first-come first-serve basis.
+		<div class="car_text col-lg-10">
+		<h5 class=" col-lg-8">If your school isn’t along a bus route, you can still be reimbursed for travel. Gas will be reimbursed for any car that has 3 or more hackers in it (these girls do need to register, check in, and participate in the demo fair, to ensure that they are actually attending Pearl Hacks). Please see the chart to check how much of your gas we will cover. Please fill out the gas form if you need to apply for reimbursement. We have limited funds, which will be given on a first-come first-serve basis.
 		</h5>
 			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
 				<div class="car_item col-lg-6 col-sm-6 col-6">
