--- a/full-site-underdev/index.html
+++ b/full-site-underdev/index.html
@@ -11,12 +11,19 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+	<div class="logo">
+		<a class="" href="index.html">
+			<img src="img/nav_logo.png" width="200"  alt="">
+		</a>
+    </div>
 
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
+
 
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
@@ -25,7 +32,7 @@
         			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           				<a class="dropdown-item" href="#">Participant</a>
           				<a class="dropdown-item" href="#">Mentor</a>
-         				 <a class="dropdown-item" href="#">Volunteer</a>
+          				<a class="dropdown-item" href="#">Volunteer</a>
         			</div>
 				</li>
 				<li class="nav-item">
@@ -50,16 +57,12 @@
 
 	<div class="home-bg">
 		<div class="row col-lg-10">
-			<div class="col col-lg-1">
-			</div>
-			<div class="col col-lg-5">
+			<div class="col-lg-5 offset-lg-1 col-md-10 offset-md-1 col-sm-10 offset-sm-1">
 				<img src="img/logo.png">
 			</div>
-			<div class="col col-lg-1">
-			</div>
-			<div class="col col-lg-5 text">
-				<h1>Feb.2-4, 2019</h1>
-				<h3>Stone Center</h3>
+			<div class="col-lg-5 offset-lg-1 col-md-10 offset-md-1 col-sm-10 offset-sm-1 text">
+				<h1>Feb.15-17, 2019</h1>
+				<h3>Sitterson Hall</h3>
 				<h3>UNC-Chapel Hill</h3>
 			</div>
 		</div>
