improve mobile experince

--- a/full-site-underdev/travel.html
+++ b/full-site-underdev/travel.html
@@ -13,10 +13,17 @@
 </head>
 
 <body>
+	<div class="logo">
+		<a class="" href="index.html">
+			<img src="img/nav_logo.png" width="200"  alt="">
+		</a>
+    </div>
+
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
+
 
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
@@ -25,11 +32,11 @@
         			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           				<a class="dropdown-item" href="#">Participant</a>
           				<a class="dropdown-item" href="#">Mentor</a>
-         				 <a class="dropdown-item" href="#">Volunteer</a>
+          				<a class="dropdown-item" href="#">Volunteer</a>
         			</div>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" href="travel.html">Travel</a>
+					<a class="nav-link" href="travel.html">Travel</a>
 				</li>
 
 				<li class="nav-item">
@@ -48,6 +55,7 @@
   		</div>
 	</nav>
 
+
 	<div class="travel subtitle">
 		<h2>Travel</h2>
 	</div>
@@ -65,19 +73,25 @@
 				<h6>George Mason University</h6>
 				<h6>University of Virginia</h6>
 				<h6>Virginia Commonwealth University</h6>
+				<h6>George Washington University </h6>
+				<h6>William and Mary</h6>
 			</div>
 			<div class="route_item col-lg-6 second">
 				<h5>Western Route</h5>
 				<h6>Georgia Institute of Technology</h6>
 				<h6>Emory University</h6>
+				<h6>Clemson University</h6>
+				<h6>Georgia State University</h6>
+				<h6>Furman University</h6>
+
+			</div>
+			<div class="route_item south col-lg-12">
+				<h5>Southern Route</h5>
+				<h6>University of Florida</h6>
+				<h6>University of South Carolina</h6>
+				<h6>Benedict College</h6>
 			</div>
 		</div>
-		<!-- <div class="bus_table2 col-lg-5">
-			<h5>Bus Routes</h5>
-		</div>
-		<div class="bus_table2 col-lg-5">
-			<h5>Bus Routes</h5>
-		</div>	 -->
 	</div>
 
 	<div class="car float">
@@ -145,13 +159,12 @@
 		</div>
 	</div>
 
-	<div class="plane float col-lg-8">
-		<h4>Planes</h4>
-		<h5 class="col-lg-10">Flights will be supplemented up to <span>&#36;</span>300, on a first come first serve basis. Please do not purchase your flight until you have confirmation from our Director of Transportation, who will contact you after you submit your request through this form. Reimbursement will be a <span>&#36;</span>300 Visa gift card that will be distributed at the hackathon to those who are approved, so the full cost of the flight will need to be covered until the weekend of the event.
-
-		<br>We’ve filled all of our flight reimbursement spots for this year, please check out our bus routes to see if we pick up at a location near you!
-		</h5>
+	<div class="other float col-lg-8">
+		<h4>Other</h4>
+		<h5 class="col-lg-10">FIf you decide to provide any other means of transportation (i.e. train or a bus not on our route), please email
+		<span style="text-decoration: underline;">transportation@pearlhacks.com</span>. Feel free to reach out to us regarding any other transportation related questions you may have too! We’re looking forward to having you at our hackathon! </h5>
 	</div>
+
 
 	<footer class="footer">
 		<a href="mailto: hello@pearlhacks.com"><i class="fas fa-envelope"></i></a>
