--- a/full-site-underdev/faq.html
+++ b/full-site-underdev/faq.html
@@ -13,10 +13,17 @@
 </head>
 <body>
 
+	<div class="logo">
+		<a class="" href="index.html">
+			<img src="img/nav_logo.png" width="200"  alt="">
+		</a>
+    </div>
+
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
+
 
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
@@ -25,7 +32,7 @@
         			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           				<a class="dropdown-item" href="#">Participant</a>
           				<a class="dropdown-item" href="#">Mentor</a>
-         				 <a class="dropdown-item" href="#">Volunteer</a>
+          				<a class="dropdown-item" href="#">Volunteer</a>
         			</div>
 				</li>
 				<li class="nav-item">
@@ -42,17 +49,18 @@
        			 	<a class="nav-link" href="schedule.html">Schedule</a>
       			</li>
     		 	<li class="nav-item">
-    		 		<a class="nav-link active" href="faq.html">FAQ</a>
+    		 		<a class="nav-link" href="faq.html">FAQ</a>
     		 	</li>
     		</ul>
   		</div>
 	</nav>
 
+
 	<div class="faq subtitle">
 		<h2>FAQ</h2>
 	</div>
 
-	<div class ="wrapper col-lg-8">
+	<div class ="wrapper col-lg-10">
 		<div id="accordion">
 		  <div class="wrapper2">
 		  <div class="card">
