--- a/full-site-underdev/schedule.html
+++ b/full-site-underdev/schedule.html
@@ -13,10 +13,17 @@
 </head>
 <body>
 
+	<div class="logo">
+		<a class="" href="index.html">
+			<img src="img/nav_logo.png" width="200"  alt="">
+		</a>
+    </div>
+
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
+
 
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
@@ -25,7 +32,7 @@
         			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           				<a class="dropdown-item" href="#">Participant</a>
           				<a class="dropdown-item" href="#">Mentor</a>
-         				 <a class="dropdown-item" href="#">Volunteer</a>
+          				<a class="dropdown-item" href="#">Volunteer</a>
         			</div>
 				</li>
 				<li class="nav-item">
@@ -39,7 +46,7 @@
 				</li>
 
      			<li class="nav-item">
-       			 	<a class="nav-link active" href="schedule.html">Schedule</a>
+       			 	<a class="nav-link" href="schedule.html">Schedule</a>
       			</li>
     		 	<li class="nav-item">
     		 		<a class="nav-link" href="faq.html">FAQ</a>
@@ -48,6 +55,7 @@
   		</div>
 	</nav>
 
+
 	<div class="schedule subtitle">
 		<h2>Schedule</h2>
 	</div>
@@ -55,7 +63,7 @@
 		<h5>Coming Soon :)</h5>
 	</div>
 
-	<footer class="footer">
+	<footer class="footer fixed">
 		<a href="mailto: hello@pearlhacks.com"><i class="fas fa-envelope"></i></a>
 		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f" href="https://www.facebook.com/pearlhackathon/"></i>
 		<a href="https://twitter.com/PearlHacks" target="_blank"><i class="fab fa-twitter"></i></a>
