--- a/full-site-underdev/faq.html
+++ b/full-site-underdev/faq.html
@@ -49,7 +49,7 @@
        			 	<a class="nav-link" href="schedule.html">Schedule</a>
       			</li>
     		 	<li class="nav-item">
-    		 		<a class="nav-link" href="faq.html">FAQ</a>
+    		 		<a class="nav-link active" href="faq.html">FAQ</a>
     		 	</li>
     		</ul>
   		</div>
@@ -333,12 +333,12 @@
 
 
 	<footer class="footer">
-		<a href="mailto: hello@pearlhacks.com"><i class="fas fa-envelope"></i></a>
-		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f" href="https://www.facebook.com/pearlhackathon/"></i>
+		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+		<a href="https://github.com/pearlhacks" target="_blank"><i class="fab fa-github"></i></a>
+		<a href="mailto: hello@pearlhacks.com"><i class="far fa-envelope"></i></a>
 		<a href="https://twitter.com/PearlHacks" target="_blank"><i class="fab fa-twitter"></i></a>
 		<a href="https://www.instagram.com/pearlhacks/" target="_blank"><i class="fab fa-instagram"></i></a>
 	</footer>
-
 
  <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
