--- a/full-site-underdev/schedule.html
+++ b/full-site-underdev/schedule.html
@@ -46,7 +46,7 @@
 				</li>
 
      			<li class="nav-item">
-       			 	<a class="nav-link" href="schedule.html">Schedule</a>
+       			 	<a class="nav-link active" href="schedule.html">Schedule</a>
       			</li>
     		 	<li class="nav-item">
     		 		<a class="nav-link" href="faq.html">FAQ</a>
@@ -63,9 +63,10 @@
 		<h5>Coming Soon :)</h5>
 	</div>
 
-	<footer class="footer fixed">
-		<a href="mailto: hello@pearlhacks.com"><i class="fas fa-envelope"></i></a>
-		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f" href="https://www.facebook.com/pearlhackathon/"></i>
+	<footer class="footer">
+		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+		<a href="https://github.com/pearlhacks" target="_blank"><i class="fab fa-github"></i></a>
+		<a href="mailto: hello@pearlhacks.com"><i class="far fa-envelope"></i></a>
 		<a href="https://twitter.com/PearlHacks" target="_blank"><i class="fab fa-twitter"></i></a>
 		<a href="https://www.instagram.com/pearlhacks/" target="_blank"><i class="fab fa-instagram"></i></a>
 	</footer>
