--- a/full-site-underdev/index.html
+++ b/full-site-underdev/index.html
@@ -24,7 +24,6 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item dropdown">
@@ -77,14 +76,16 @@
 		<div class="subtitle">
 			<h2>Sponsors</h2>
 		</div>
-		<div class="sponsors_gallery col-lg-10">
+		<div class="sponsors_gallery col-lg-6">
+			<h5>We’re thrilled that you’re considering sponsoring Pearl Hacks! Reach out to <a href="mailto: sponsor@pearlhacks.com">sponsor@pearlhacks.com</a>. We look forward to working with you!</h5>
 		</div>
 
 	</div>
 
 	<footer class="footer">
-		<a href="mailto: hello@pearlhacks.com"><i class="fas fa-envelope"></i></a>
-		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f" href="https://www.facebook.com/pearlhackathon/"></i>
+		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+		<a href="https://github.com/pearlhacks" target="_blank"><i class="fab fa-github"></i></a>
+		<a href="mailto: hello@pearlhacks.com"><i class="far fa-envelope"></i></a>
 		<a href="https://twitter.com/PearlHacks" target="_blank"><i class="fab fa-twitter"></i></a>
 		<a href="https://www.instagram.com/pearlhacks/" target="_blank"><i class="fab fa-instagram"></i></a>
 	</footer>
