--- a/full-site-underdev/travel.html
+++ b/full-site-underdev/travel.html
@@ -36,7 +36,7 @@
         			</div>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="travel.html">Travel</a>
+					<a class="nav-link active" href="travel.html">Travel</a>
 				</li>
 
 				<li class="nav-item">
@@ -161,17 +161,19 @@
 
 	<div class="other float col-lg-8">
 		<h4>Other</h4>
-		<h5 class="col-lg-10">FIf you decide to provide any other means of transportation (i.e. train or a bus not on our route), please email
-		<span style="text-decoration: underline;">transportation@pearlhacks.com</span>. Feel free to reach out to us regarding any other transportation related questions you may have too! We’re looking forward to having you at our hackathon! </h5>
+		<h5 class="col-lg-10">If you decide to provide any other means of transportation (i.e. train or a bus not on our route), please email
+		<a href="mailto: sponsor@pearlhacks.com">transportation@pearlhacks.com</a>. Feel free to reach out to us regarding any other transportation related questions you may have too! We’re looking forward to having you at our hackathon! </h5>
 	</div>
 
 
 	<footer class="footer">
-		<a href="mailto: hello@pearlhacks.com"><i class="fas fa-envelope"></i></a>
-		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f" href="https://www.facebook.com/pearlhackathon/"></i>
+		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+		<a href="https://github.com/pearlhacks" target="_blank"><i class="fab fa-github"></i></a>
+		<a href="mailto: hello@pearlhacks.com"><i class="far fa-envelope"></i></a>
 		<a href="https://twitter.com/PearlHacks" target="_blank"><i class="fab fa-twitter"></i></a>
 		<a href="https://www.instagram.com/pearlhacks/" target="_blank"><i class="fab fa-instagram"></i></a>
 	</footer>
+
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
