fix styles of multiple pages

--- a/full-site-underdev/index.html
+++ b/full-site-underdev/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="/img/fa-logo.png">
 </head>
 
 <body>
@@ -76,8 +77,10 @@
 		<div class="subtitle">
 			<h2>Sponsors</h2>
 		</div>
-		<div class="sponsors_gallery col-lg-6">
-			<h5>We’re thrilled that you’re considering sponsoring Pearl Hacks! Reach out to <a href="mailto: sponsor@pearlhacks.com">sponsor@pearlhacks.com</a>. We look forward to working with you!</h5>
+		<div class="sponsors_wrap col-lg-8">
+			<div class="sponsors_gallery col-lg-10">
+				<h5>We’re thrilled that you’re considering sponsoring Pearl Hacks! Reach out to <a href="mailto: sponsor@pearlhacks.com">sponsor@pearlhacks.com</a>. We look forward to working with you!</h5>
+			</div>
 		</div>
 
 	</div>
