--- a/full-site-underdev/schedule.html
+++ b/full-site-underdev/schedule.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="/img/fa-logo.png">
 </head>
 <body>
 
@@ -59,8 +60,19 @@
 	<div class="schedule subtitle">
 		<h2>Schedule</h2>
 	</div>
-	<div class="calendar float col-lg-8">
-		<h5>Coming Soon :)</h5>
+	
+	<div class="row">
+		<div class="side-graphics col-lg-2">
+			<img src="img/schedule_side.png">
+		</div>
+
+		<div class="calendar float col-lg-8">
+			<h5>Coming Soon :)</h5>
+		</div>
+
+		<div class="side-graphics col-lg-2">
+			<img src="img/schedule_side.png">
+		</div>
 	</div>
 
 	<footer class="footer">
