--- a/full-site-underdev/travel.html
+++ b/full-site-underdev/travel.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="/img/fa-logo.png">
 </head>
 
 <body>
@@ -59,110 +60,139 @@
 	<div class="travel subtitle">
 		<h2>Travel</h2>
 	</div>
-	<div class="bus float col-lg-8">
-		<h4>Bus</h4>
-		<h5 class="col-lg-10">Buses are the largest way we get girls to Pearl Hacks. This year we will be offering 2 interstate routes. Check the routes below to see if your school is a stop! If you are riding a bus to Pearl Hacks, please fill out this form.</h5>
-		<div class="bus_table col-lg-10">
-			<h5>Bus Routes</h5>
+	<div class="row">
+		<div class="side-graphics col-lg-2">
+				<img src="img/travel_bus.png">
 		</div>
-		<div class="bus_route col-lg-10 row">
-			<div class="route_item col-lg-6">
-				<h5>Northern Route</h5>
-				<h6>John Hopkins University</h6>
-				<h6>University of Maryland , Baltimore County</h6>
-				<h6>George Mason University</h6>
-				<h6>University of Virginia</h6>
-				<h6>Virginia Commonwealth University</h6>
-				<h6>George Washington University </h6>
-				<h6>William and Mary</h6>
-			</div>
-			<div class="route_item col-lg-6 second">
-				<h5>Western Route</h5>
-				<h6>Georgia Institute of Technology</h6>
-				<h6>Emory University</h6>
-				<h6>Clemson University</h6>
-				<h6>Georgia State University</h6>
-				<h6>Furman University</h6>
 
+		<div class="bus float col-lg-8">
+			<h4>Bus</h4>
+			<h5 class="col-lg-10">Buses are the largest way we get girls to Pearl Hacks. This year we will be offering 2 interstate routes. Check the routes below to see if your school is a stop! If you are riding a bus to Pearl Hacks, please fill out this form.</h5>
+			<div class="bus_table col-lg-10">
+				<h5>Bus Routes</h5>
 			</div>
-			<div class="route_item south col-lg-12">
-				<h5>Southern Route</h5>
-				<h6>University of Florida</h6>
-				<h6>University of South Carolina</h6>
-				<h6>Benedict College</h6>
+			<div class="bus_route col-lg-10 row">
+				<div class="route_item col-lg-6">
+					<h5>Northern Route</h5>
+					<h6>John Hopkins University</h6>
+					<h6>University of Maryland , Baltimore County</h6>
+					<h6>George Mason University</h6>
+					<h6>University of Virginia</h6>
+					<h6>Virginia Commonwealth University</h6>
+					<h6>George Washington University </h6>
+					<h6>William and Mary</h6>
+				</div>
+				<div class="route_item col-lg-6 second">
+					<h5>Western Route</h5>
+					<h6>Georgia Institute of Technology</h6>
+					<h6>Emory University</h6>
+					<h6>Clemson University</h6>
+					<h6>Georgia State University</h6>
+					<h6>Furman University</h6>
+
+				</div>
+				<div class="route_item south col-lg-12">
+					<h5>Southern Route</h5>
+					<h6>University of Florida</h6>
+					<h6>University of South Carolina</h6>
+					<h6>Benedict College</h6>
+				</div>
 			</div>
+		</div>
+		<div class="side-graphics col-lg-2">
 		</div>
 	</div>
 
 	<div class="car float">
-		<h4>Cars</h4>
-		<div class="car_text col-lg-10">
-		<h5 class=" col-lg-8">If your school isn’t along a bus route, you can still be reimbursed for travel. Gas will be reimbursed for any car that has 3 or more hackers in it (these girls do need to register, check in, and participate in the demo fair, to ensure that they are actually attending Pearl Hacks). Please see the chart to check how much of your gas we will cover. Please fill out the gas form if you need to apply for reimbursement. We have limited funds, which will be given on a first-come first-serve basis.
-		</h5>
-			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h5>Distance from <br> Chapel Hill (round trip)</h6>
-				</div>
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h5>Reimbursement Cap (round trip)</h5>
-				</div>
+		<div class="row">
+			<div class="side-graphics col-lg-2">
+				<!-- <img src="img/travel_bus.png"> -->
 			</div>
+			<div class="car_text col-lg-8">
+				<h4>Cars</h4>
+				<h5 class="col-lg-10 car_par">If your school isn’t along a bus route, you can still be reimbursed for travel. Gas will be reimbursed for any car that has 3 or more hackers in it (these girls do need to register, check in, and participate in the demo fair, to ensure that they are actually attending Pearl Hacks). Please see the chart to check how much of your gas we will cover. Please fill out the gas form if you need to apply for reimbursement. We have limited funds, which will be given on a first-come first-serve basis.</h5>
 
-			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6>0~50 miles</h6>
+				<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h5>Distance from <br> Chapel Hill (round trip)</h5>
+					</div>
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h5>Reimbursement Cap (round trip)</h5>
+					</div>
 				</div>
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6><span>&#36;</span>0</h6>
+
+				<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6>0~50 miles</h6>
+					</div>
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6><span>&#36;</span>0</h6>
+					</div>
+				</div>
+
+				<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6>50~100 miles</h6>
+					</div>
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6><span>&#36;</span>20</h6>
+					</div>
+				</div>
+
+				<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6>100~200 miles</h6>
+					</div>
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6><span>&#36;</span>40</h6>
+					</div>
+				</div>
+
+				<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6>201~300 mile</h6>
+					</div>
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6><span>&#36;</span>60</h6>
+					</div>
+				</div>
+
+				<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6>301~400 miles</h6>
+					</div>
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6><span>&#36;</span>80</h6>
+					</div>
+				</div>
+
+				<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6>400+ miles</h6>
+					</div>
+					<div class="car_item col-lg-6 col-sm-6 col-6">
+						<h6><span>&#36;</span>100</h6>
+					</div>
 				</div>
 			</div>
-			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6>50~100 miles</h6>
-				</div>
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6><span>&#36;</span>20</h6>
-				</div>
-			</div>
-			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6>100~200 miles</h6>
-				</div>
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6><span>&#36;</span>40</h6>
-				</div>
-			</div>
-			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6>201~300 mile</h6>
-				</div>
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6><span>&#36;</span>60</h6>
-				</div>
-			</div>
-			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6>301~400 miles</h6>
-				</div>
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6><span>&#36;</span>80</h6>
-				</div>
-			</div>
-			<div class="car_reimb col-lg-6 col-sm-6-12 col-12 row">
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6>400+ miles</h6>
-				</div>
-				<div class="car_item col-lg-6 col-sm-6 col-6">
-					<h6><span>&#36;</span>100</h6>
-				</div>
+			<div class="side-graphics col-lg-2">
+				<img src="img/travel_car.png">
 			</div>
 		</div>
 	</div>
 
-	<div class="other float col-lg-8">
-		<h4>Other</h4>
-		<h5 class="col-lg-10">If you decide to provide any other means of transportation (i.e. train or a bus not on our route), please email
-		<a href="mailto: sponsor@pearlhacks.com">transportation@pearlhacks.com</a>. Feel free to reach out to us regarding any other transportation related questions you may have too! We’re looking forward to having you at our hackathon! </h5>
+	<div class="row">
+		<div class="side-graphics col-lg-2">
+			<img src="img/travel_plane.png">
+		</div>
+		<div class="other float col-lg-8">
+			<h4>Other</h4>
+			<h5 class="col-lg-10">If you decide to provide any other means of transportation (i.e. train or a bus not on our route), please email
+			<a href="mailto: sponsor@pearlhacks.com">transportation@pearlhacks.com</a>. Feel free to reach out to us regarding any other transportation related questions you may have too! We’re looking forward to having you at our hackathon! </h5>
+		</div>
+		<div class="side-graphics col-lg-2">
+<!-- 			<img src="img/travel_car.png"> -->
+		</div>
 	</div>
 
 
@@ -174,6 +204,21 @@
 		<a href="https://www.instagram.com/pearlhacks/" target="_blank"><i class="fab fa-instagram"></i></a>
 	</footer>
 
+
+
+<script>
+	(function($) {
+    var $window = $(window),
+        $html = $('html');
+
+    $window.resize(function resize() {
+        if ($window.width() < 514) {
+            $html.removeClass('row');
+        }
+
+    })
+});
+</script>
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
