--- a/full-site-underdev/faq.html
+++ b/full-site-underdev/faq.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="/img/fa-logo.png">
 </head>
 <body>
 
@@ -221,7 +222,7 @@
 		    </div>
 		  </div>
 		</div>
-		</div>
+	</div>
 	</div>
 
 	<div class="guideline">
@@ -245,7 +246,7 @@
 							<h4>Late Sign-up</h4>
 						</div>
 						 <div class="back">
-						 	<h6>Anyone may attend Pearl Hacks, even if you register late or not at all. You can sign up at the door. In order to accommodate everyone, we cannot guarantee food or t-shirts for late registrants. There are many affordable dining options within walking distance of the venue and plenty of room for you to work while you're here. Whether you register beforehand or when you arrive, you will have a great time at Pearl Hacks.</h6>
+						 	<h6>Anyone may attend Pearl Hacks, even if you register late or not at all. You can sign up at the door. In order to accommodate everyone, we cannot guarantee food or t-shirts for late registrants. There are many affordable dining options within walking distance of the venue and plenty of room for you to work while you're here. </h6>
 						 </div>
 					</div>
 				</div>
@@ -288,7 +289,7 @@
 							<h4>Food Requiremnt</h4>
 						</div>
 						 <div class="back">
-						 	<h6>You should already know this one. Take only as much food as you will eat, then come back for more later if you are still hungry. Large events run the risk of running out of food not because there isn't enough for everyone but because people, worried that there won't be enough for them, take more than they can eat. This leaves less for people who come later. In the end, the people who took too much end up throwing away the extra food because they couldn't eat all of it. Others end up having to go find food elsewhere. Don't do this at Pearl Hacks.</h6>
+						 	<h6>Large events run the risk of running out of food not because there isn't enough for everyone but because people, worried that there won't be enough for them, take more than they can eat. In the end, the people who took too much end up throwing away the extra food. Others end up having to go find food elsewhere. Don't do this at Pearl Hacks.</h6>
 						 </div>
 					</div>
 				</div>
