add class on differnet screen size

--- a/full-site-underdev/travel.html
+++ b/full-site-underdev/travel.html
@@ -60,7 +60,7 @@
 	<div class="travel subtitle">
 		<h2>Travel</h2>
 	</div>
-	<div class="row">
+	<div class="remove_later">
 		<div class="side-graphics col-lg-2">
 				<img src="img/travel_bus.png">
 		</div>
@@ -104,7 +104,7 @@
 	</div>
 
 	<div class="car float">
-		<div class="row">
+		<div class="remove_later">
 			<div class="side-graphics col-lg-2">
 				<!-- <img src="img/travel_bus.png"> -->
 			</div>
@@ -181,7 +181,7 @@
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="remove_later">
 		<div class="side-graphics col-lg-2">
 			<img src="img/travel_plane.png">
 		</div>
@@ -206,24 +206,33 @@
 
 
 
-<script>
-	(function($) {
-    var $window = $(window),
-        $html = $('html');
 
-    $window.resize(function resize() {
-        if ($window.width() < 514) {
-            $html.removeClass('row');
-        }
-
-    })
-});
-</script>
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+<script>
+
+	$('.remove_later').addClass('row')
+
+	$(function(){
+
+		if ($(window).width()<992){
+			$('.remove_later').removeClass('row')
+		}else{
+			 $('.remove_later').addClass('row')
+		}
+		$(window).bind("resize",function(){
+		    if($(this).width() <992){
+		    $('.remove_later').removeClass('row')
+		    }else{
+		    $('.remove_later').addClass('row')
+		    }
+		})
+	})
+
+</script>
 </body>
 </html>
