Update splash text

--- a/full-site-underdev/index.html
+++ b/full-site-underdev/index.html
@@ -69,8 +69,10 @@
 	</div>
 
 	<div class="intro float col-lg-8">
-		<h2>Who are we</h2>
-		<h5 class="col-lg-10">Pearl Hacks is an all-female identifying weekend long hackathon where people from all over the North American region come to UNC Chapel Hill to learn and innovate using their coding skills.  Ladies in teams of up to four will have 24 hours to complete a tech project of their choice with the help of excellent sponsors, mentors, workshops, and tech talks.  All the while, they’ll get to meet some fantastic ladies, enjoy fun games, collect swag, and eat free food.  We especially cater toward first-time hackers who are looking for an inclusive and supportive environment to explore the world of technology.<br><br>Join us at this wonderful event!</h4>
+		<h2>Who we are</h2>
+		<h5 class="col-lg-10">Pearl Hacks is a weekend-long hackathon for female and non-binary college students held at UNC-Chapel Hill. Participants work in teams of up to four to ideate and create incredible projects in just 24 hours, with the help of excellent mentors, workshops, and tech talks. All the while, they’ll get to meet some fantastic people, enjoy fun games, collect swag, and eat free food. We especially cater toward first-time hackers who are looking for an inclusive and supportive environment to explore the world of technology.
+		<br><br>
+		Join us at this wonderful event!
 	</div>
 
 	<div class="sponsors">
