Fix typo in faq

--- a/full-site-underdev/faq.html
+++ b/full-site-underdev/faq.html
@@ -286,7 +286,7 @@
 				<div class="box col-lg-3">
 					<div class="grid">
 						<div class="front">
-							<h4>Food Requiremnt</h4>
+							<h4>Food Requirement</h4>
 						</div>
 						 <div class="back">
 						 	<h6>Large events run the risk of running out of food not because there isn't enough for everyone but because people, worried that there won't be enough for them, take more than they can eat. In the end, the people who took too much end up throwing away the extra food. Others end up having to go find food elsewhere. Don't do this at Pearl Hacks.</h6>
