Fix more typos in faq

--- a/full-site-underdev/faq.html
+++ b/full-site-underdev/faq.html
@@ -276,7 +276,7 @@
 				<div class="box col-lg-3">
 					<div class="grid">
 						<div class="front">
-							<h4>Code Requiremnt</h4>
+							<h4>Code Requirement</h4>
 						</div>
 						 <div class="back">
 						 	<h6>All code presented for judging must be written during the event. Contestants that violate this rule will be disqualified. The easiest way to avoid doing this is by trying something you've never done before.</h6>
@@ -319,7 +319,7 @@
 				<div class="box col-lg-3">
 					<div class="grid">
 						<div class="front">
-							<h4>MLH Code of Sharing</h4>
+							<h4>MLH Code of Conduct</h4>
 						</div>
 						 <div class="back">
 						 	<h6>In addition to everything listed on this page, Pearl Hacks also requires all attendees to abide by the MLH Code of Conduct.</h6>
