--- a/full-site-underdev/faq.html
+++ b/full-site-underdev/faq.html
@@ -164,7 +164,7 @@
 		    <div class="card-header" id="headingSeven">
 		      <h5 class="mb-0">
 		        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-		          <h5>What kind of hardware will you provide?</h5>
+		          <h5>What kind of hardware be provided?</h5>
 		        </button>
 		      </h5>
 		    </div>
