--- a/full-site-underdev/index.html
+++ b/full-site-underdev/index.html
@@ -30,9 +30,9 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Register</a>
         			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          				<a class="dropdown-item" href="#">Participant</a>
-          				<a class="dropdown-item" href="#">Mentor</a>
-          				<a class="dropdown-item" href="#">Volunteer</a>
+          				<a class="dropdown-item" href="https://pearlhacks1.typeform.com/to/H6yqGu">Participant</a>
+          				<a class="dropdown-item" href="https://pearlhacks1.typeform.com/to/WRg32d">Mentor</a>
+          				<a class="dropdown-item" href="https://pearlhacks1.typeform.com/to/yhzSLh">Volunteer</a>
         			</div>
 				</li>
 				<li class="nav-item">
@@ -64,6 +64,7 @@
 				<h1>Feb.15-17, 2019</h1>
 				<h3>Sitterson Hall</h3>
 				<h3>UNC-Chapel Hill</h3>
+				<a href="https://pearlhacks1.typeform.com/to/H6yqGu"><button class="register" type="button">Register Now</button></a>
 			</div>
 		</div>
 	</div>
@@ -81,7 +82,7 @@
 		</div>
 		<div class="sponsors_wrap col-lg-8">
 			<div class="sponsors_gallery col-lg-10">
-				<h5>We’re thrilled that you’re considering sponsoring Pearl Hacks! Reach out to <a href="mailto: sponsor@pearlhacks.com">sponsor@pearlhacks.com</a>. We look forward to working with you!</h5>
+				<h5>2019 sponsors to be released soon! Wanna sponsor us? Reach out to <a href="mailto: sponsor@pearlhacks.com">sponsor@pearlhacks.com</a>. We look forward to working with you!</h5>
 			</div>
 		</div>
 
