--- a/full-site-underdev/schedule.html
+++ b/full-site-underdev/schedule.html
@@ -75,7 +75,7 @@
 		</div>
 	</div>
 
-	<footer class="footer">
+	<footer class="footer fixed">
 		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f"></i></a>
 		<a href="https://github.com/pearlhacks" target="_blank"><i class="fab fa-github"></i></a>
 		<a href="mailto: hello@pearlhacks.com"><i class="far fa-envelope"></i></a>
