--- a/full-site-underdev/index.html
+++ b/full-site-underdev/index.html
@@ -7,10 +7,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Cache-control" content="public">
 	<meta name=“google-site-verification” content=“ZchMMobOHNy-YGuU0QF3YSSbdGX2p3UvJXtwWhaOYto” />
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129527857-1"></script><script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-129527857-1');
+	</script>
+
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
-	<link rel="icon" href="/img/fa-logo.png">
+	<link rel="icon" type="image/png" href="img/fa-logo.png" />
 </head>
 
 <body>
@@ -61,8 +70,8 @@
 				<img src="img/logo.png">
 			</div>
 			<div class="col-lg-5 offset-lg-1 col-md-10 offset-md-1 col-sm-10 offset-sm-1 text">
-				<h1>Feb.15-17, 2019</h1>
-				<h3>Sitterson Hall</h3>
+				<h1>PEARL HACKS</h1>
+				<h3>Feb.16-17, 2019</h3>
 				<h3>UNC-Chapel Hill</h3>
 				<a href="https://pearlhacks1.typeform.com/to/H6yqGu"><button class="register" type="button">Register Now</button></a>
 			</div>
@@ -82,7 +91,9 @@
 		</div>
 		<div class="sponsors_wrap col-lg-8">
 			<div class="sponsors_gallery col-lg-10">
-				<h5>2019 sponsors to be released soon! Wanna sponsor us? Reach out to <a href="mailto: sponsor@pearlhacks.com">sponsor@pearlhacks.com</a>. We look forward to working with you!</h5>
+				<h5>2019 sponsors to be released soon!</h5>
+				</br>
+				<h6>Wanna sponsor us?</br> Reach out to <a href="mailto: sponsor@pearlhacks.com">sponsor@pearlhacks.com</a>.</br> We look forward to working with you!</h6>
 			</div>
 		</div>
 
